# miband-pulse-overlay

./: .gitignore  Cargo.toml  LICENSE  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: about.html  index.html
